--- a/Exercice/Zozor.html
+++ b/Exercice/Zozor.html
@@ -33,13 +33,13 @@
 
 
 
-		<div id="bannière">
-			<p><img src="separateur.png" alt="separateur" class="ligne"></p>
-
-			<p><img class="sanfrancisco" src="sanfrancisco.jpg" alt="sanfrancisco"></p>
-			<p class="retour">Retour sur mes vacances aux États-Unis... <a class="cfarticle" href="#">voir l'article</a></p>
-			<p> <img src="flecheblanchedroite.png" alt="flecheblanchedroite"> </p>
+	<div id="banniere_image">
+		<div id="banniere">
+			Retour sur mes vacances aux États-Unis...
+			<a href="#" class="bouton_rouge">Voir l'article <img src="images/flecheblanchedroite.png" alt="" /></a>
 		</div>
+	</div>
+	
 
 
 
