--- a/Exercice/Zozor.html
+++ b/Exercice/Zozor.html
@@ -10,8 +10,9 @@
 
 <body>
 	<div id="bloc_page">
+<!------------------------------------------------------------------HEADER---------------------------------------------------------------------------------------->
 
-	<header>
+<header>
 		<article>
 			<p> <img class="logo" src="zozor_logo.png" alt="zozor_logo"></p>
 			
@@ -29,26 +30,35 @@
 				<li><a href="#">CONTACT</a></li>
 			</ul>			
 		</nav>
-	</header>
+</header>
 
+		<p><img src="separateur.png" alt="separateur" class="ligne"></p>
 
-
-	<div id="banniere_image">
-		<div id="banniere">
-			Retour sur mes vacances aux États-Unis...
-			<a href="#" class="bouton_rouge">Voir l'article <img src="images/flecheblanchedroite.png" alt="" /></a>
-		</div>
+	<div id="banniere">
+		<div class="description">
+			<p class="retour">Retour sur mes vacances aux États-Unis... </p>
+			<a class="cfarticle" href="#">voir l'article <img src="flecheblanchedroite.png" alt="flecheblanche"></a> 
+		
+	</div>  
 	</div>
 	
 
+<!------------------------------------------------------------------HEADER---------------------------------------------------------------------------------------->
 
+<!--------------------------------------------------------------------SECTION--------------------------------------------------------------------------------------->
 
 	<section>
 		<article>
 			<p> <img class="epingle" src="ico_epingle.png" alt="ico_epingle"> </p>
 			<h2>
-				JE SUIS UN GRAND VOYAGEUR !
+				JE SUIS UN GRAND VOYAGEUR 
 			</h2>
+				<p> Alii nullo quaerente vultus severitate adsimulata patrimonia sua in inmensum extollunt, cultorum ut puta feracium multiplicantes annuos fructus, quae a primo ad ultimum solem se abunde iactitant possidere, ignorantes profecto maiores suos, per quos ita magnitudo Romana porrigitur, non divitiis eluxisse sed per bella saevissima, nec opibus nec victu nec indumentorum vilitate gregariis militibus discrepantes opposita cuncta superasse virtute.</p>
+
+				<p> Sed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de amicitia. Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens (sic enim est habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium loqui ipsum putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet Laelius, cuius tota disputatio est de amicitia, quam legens te ipse cognosces.</p>
+
+				<p> Ergo ego senator inimicus, si ita vultis, homini, amicus esse, sicut semper fui, rei publicae debeo. Quid? si ipsas inimicitias, depono rei publicae causa, quis me tandem iure reprehendet, praesertim cum ego omnium meorum consiliorum atque factorum exempla semper ex summorum hominum consiliis atque factis mihi censuerim petenda. </p>
+
 				<p> Alii nullo quaerente vultus severitate adsimulata patrimonia sua in inmensum extollunt, cultorum ut puta feracium multiplicantes annuos fructus, quae a primo ad ultimum solem se abunde iactitant possidere, ignorantes profecto maiores suos, per quos ita magnitudo Romana porrigitur, non divitiis eluxisse sed per bella saevissima, nec opibus nec victu nec indumentorum vilitate gregariis militibus discrepantes opposita cuncta superasse virtute.</p>
 
 				<p> Sed ut tum ad senem senex de senectute, sic hoc libro ad amicum amicissimus scripsi de amicitia. Tum est Cato locutus, quo erat nemo fere senior temporibus illis, nemo prudentior; nunc Laelius et sapiens (sic enim est habitus) et amicitiae gloria excellens de amicitia loquetur. Tu velim a me animum parumper avertas, Laelium loqui ipsum putes. C. Fannius et Q. Mucius ad socerum veniunt post mortem Africani; ab his sermo oritur, respondet Laelius, cuius tota disputatio est de amicitia, quam legens te ipse cognosces.</p>
@@ -58,52 +68,66 @@
 
 		<aside>
 			<h3>À PROPOS DE L'AUTEUR</h3>
-			<p><img classe="img_zozor" src="zozor_classe.png" alt="zozor_classe"></p>
+
+			<center class="img_zozor"><img  src="zozor_classe.png" alt="zozor_classe" classe="zozor"></center>
 			<p>Laisse moir le temps de me présenter. Je m'appelle Zozor, je suis né un 23 novembre 2005.</p>
-			<p>Bien maigre n'est-ce pas ? C'est pourquoi aujourd'hui j'ai décidé d'écrire ma biographie (ou zbiographie, comme vous voulez !) afin que les zéros sachent enfin qui je uis réellement.</p>
+			<p>Bien maigre n'est-ce pas ? C'est pourquoi aujourd'hui j'ai décidé d'écrire ma biographie (ou zbiographie, comme vous voulez !) afin que les zéros sachent enfin qui je suis réellement.</p>
+
+			<p><img class="bulle" src="bulle.png" alt="bulle"></p>
+
 			<div id=images_reseaux>
 				<p><img src="facebook.png" alt="facebook"></p>
 				<p><img src="twitter.png" alt="twitter"></p>
 				<p><img src="vimeo.png" alt="vimeo"></p>
 				<p><img src="flickr.png" alt="flickr"></p>
-				<p><img src="rss.png" alt="rss"></p>
+				<p><img class="rss" src="rss.png" alt="rss"></p>
 			</div>
 		</aside>
 	</section>
+<!---------------------------------------------------------------------SECTION--------------------------------------------------------------------------------------->
 
 
+<!-----------------------------------------------------------------------FOOTER------------------------------------------------------------------------------------------->
 
+	
+	<p><img src="separateur.png" alt="separateur" class="ligne"></p>
+		<img src="ico_top.png" alt="ico_top" class="top">
 	<footer>
 
 		<div>
-			<p><h4>MON DERNIER TWEET !</h4></p>
-			<p>HI HAAAAAAN</p>
+			<p><h4>MON DERNIER TWEET</h4></p>
+			<p>Hi haaaaaaaaaaan !</p>
 			<p>Le 12 mai à 23h12</p>
 		</div>
 
-			<div>
+		<div>
 			<p><h4>MES PHOTOS</h4></p>
+		<div class="photosfooter">
 			<p><img src="photo1.jpg" alt="photo1"></p>
 			<p><img src="photo2.jpg" alt="photo2"></p>
 			<p><img src="photo3.jpg" alt="photo3"></p>
 			<p><img src="photo4.jpg" alt="photo4"></p>
 		</div>
+		</div>
 
 		<nav>
 			<p><h4>MES AMIS</h4></p>
 
-			<ul>
-				<li><a href="#">Pupi le lapin</a></li>
-				<li><a href="#">M.Baobab</a></li>
-				<li><a href="#">Kaiwall</a></li>
-				<li><a href="#">Perceval</a></li>
-				<li><a href="#">Belette</a></li>
-				<li><a href="#">Le concombre masqué</a></li>
-				<li><a href="#">Ptit prince</a></li>
-				<li><a href="#">M.Fan</a></li>
-			</ul>
+			<div class="listefooter">
+				<li><a href="#"><img src="ico_liensexterne.png" alt="fleche_rouge">  Pupi le lapin</a></li></br>
+				<li><a href="#"><img src="ico_liensexterne.png" alt="fleche_rouge">  M.Baobab</a></li></br>
+				<li><a href="#"><img src="ico_liensexterne.png" alt="fleche_rouge">  Kaiwall</a></li></br>
+				<li><a href="#"><img src="ico_liensexterne.png" alt="fleche_rouge">  Perceval.eu</a></li></br>
+				<li><a href="#"><img src="ico_liensexterne.png" alt="fleche_rouge">  Belette</a></li></br>
+				<li><a href="#"><img src="ico_liensexterne.png" alt="fleche_rouge">  Le concombre masqué</a></li></br>
+				<li><a href="#"><img src="ico_liensexterne.png" alt="fleche_rouge">  Ptit prince</a></li></br>
+				<li><a href="#"><img src="ico_liensexterne.png" alt="fleche_rouge">  M.Fan</a></li></br>
+			</div>
 
 		</nav>
 	</footer>
+<!-----------------------------------------------------------------------FOOTER------------------------------------------------------------------------------------------->
+
+
 </body>
 </html>
